feat: add missiles-list in missiles.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                    <!-- ----HEADER---- -->
 
       <header>
-        <div class="container header-container">
+        <div class="header-container">
            <div class="logo-block">
             <h2 class="logo-title">DCS wiki</h2>
             <!-- <img class="logo-icon" src="./assets/icons/missile icon.jpg" alt="missile icon"> -->
@@ -42,7 +42,7 @@
                <!-- --CARDS-BLOCK------ -->
 
         <section class="card-section">
-            <div class="container card-section-container">
+            <div class="card-section-container">
                 <div class="cards-block">
                     <a class="card">
                         <div class="card-wrapper">
@@ -72,7 +72,7 @@
                         
                         <p class="card-title">Venicles</p>
                     </a>
-                    <a class="card" href="./pages/missiles/missiles.html" data-missiles="missiles" >
+                    <a class="card" href="pages/missiles/missiles.html" data-missiles="missiles" >
                         <div class="card-wrapper" >
                             <img class="card-image" src="./assets/images/missile air air.jpg" alt="air missile"> 
                         </div>
@@ -93,14 +93,13 @@
            <!-- --FOOTER---- -->
 
            <footer class="footer">
-              <div class="container footer-container">
+              <div class="footer-container">
                 <div class="footer-logo-block ">
                     <h2 class="logo-title">DCS wiki</h2>
                     <!-- <img class="logo-icon" src="./assets/icons/missile icon.jpg" alt="missile icon"> -->
-                    
                 </div>
 
-                <span>Copyright 2022</span>
+                <span class="copyright">Copyright 2022</span>
               </div>
 
            </footer>
