add: add aim9x sidewinder and edit missiles.css

--- a/index.html
+++ b/index.html
@@ -94,10 +94,11 @@
 
            <footer class="footer">
               <div class="footer-container">
-                <div class="footer-logo-block ">
+                <a class="logo-block" href="../../index.html">
                     <h2 class="logo-title">DCS wiki</h2>
                     <!-- <img class="logo-icon" src="./assets/icons/missile icon.jpg" alt="missile icon"> -->
-                </div>
+          
+                  </a>
 
                 <span class="copyright">Copyright 2022</span>
               </div>
