--- a/pages/missiles/aim-120.html
+++ b/pages/missiles/aim-120.html
@@ -1,213 +1,76 @@
+<!DOCTYPE html>
+<html lang="ru">
 
-  <div>
-    <p class="iframe-text" style="color:rgb(255, 255, 255);line-height: 28px;letter-spacing: 2px;font-size: 20px;"> Управляемая всепогодная
-       ракета (УР) класса "воздух — воздух" средней дальности AIM-120, имевшая
-      первоначально обозначение AMRAAM (Advanced Medium-Range Air-to-Air Missile) разработана фирмой "Hughes Aircraft
-      Co".
-      Ракета принята на вооружение ВВС США в 1991 году. В апреле 1998 года фирма "Raytheon Company System" получила
-      заказ
-      на производство 813 ракет AIM-120 общей стоимостью 243 млн. долларов.
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./missiles-style.css" >
+  <title>aim-120</title>
+</head>
+<body>
+  <div class="aim120-block main-info">
+    <img src="../../assets/images/missiles/aim120.jpg" alt="foto aim120">
+    <p>
+      AIM-120 AMRAAM: что это
+Это американская управляемая ракета средней дальности класса воздух — воздух. Ракета обладает способностью работать в любых погодных условиях.
+Предназначена AIM-120 AMRAAM для поражения воздушных целей врага за пределами прямой видимости.
+Производством ракет занимались фирмы Hughes Aircraft и Raytheon. После поглощения фирмы Hughes единственным производителем ракет является фирма 
+Raytheon.</p>
+<p>Как отмечают разработчики, AMRAAM — самая совершенная в мире ракета, проверенная в боевых условиях.
+Ракета сочетает в себе беспрецедентные характеристики — она легкая и эффективная. AIM-120 AMRAAM имеет комбинацию инерциальной навигации 
+(то есть ракета сама может определять координаты и параметры движения цели).
+AMRAAM имеет бортовой активный радар, чтобы найти намеченную цель и завершить ее перехват. А ракетный двигатель, изготовленным компанией Nammo, 
+позволяет осуществлять перехват на больших расстояниях и высотах.</p>
 
-      Ракеты AMRAAM модификаций AIM-120A, А1М-120В, AIM-120B+, AIM-120C, AIM-120C-5 являются в настоящее время основным
-      оружием "воздух—воздух" истребителей США, стран—участников НАТО и других государств (всего около 18).
-      Перевооружение
-      парков истребителей этих стран (F-4F, F-14D, F-15, F-16, F/A-18, "Tornado", "Harrier", JAS-39 "Grippen", JA-37
-      "Viggen") указанными ракетами выполнено взамен УР AIM-7F, А1М-7М "Sparrow". Новые ракеты были размещены на тех же
-      пусковых установках LAU-17A, LAU-92. Осуществлено комплексирование ракет AMRAAM с самолетами F-22, "Eurofighter
-      Typhoon", "Harrier-II".
+<p>Особенность ракеты — в том, что она может запускаться как с истребителей, так и с пусковой установки.
+Носителями ракета AMRAAM выступают F-15A/B/C/D/E Eagle/Strike Eagle, F-16 Fighting Falcon, F/A-18 Super Hornet, F-22 Raptor, Eurofighter Typhoon, 
+JAS-39 Gripen, Tornado и Harrier.
+Работать как ракета класса земля — воздух AMRAAM может с системы противовоздушной обороны NASAMS, способной поражать цели на любых высотах.
+Ракета AMRAAM может перехватывать цели на больших расстояниях и высотах. Ракета получает ускорение в дальности благодаря большему ракетному двигателю 
+и оптимизированным алгоритмам управления полетом.</p>
 
-      По сравнению с УР "Sparrow" в AIM-120 достигнуто существенное снижение стартового веса, габаритов ракеты, повышена
-      эффективность борьбы как с высотными энергично маневрирующими, так и с ниэколетящими целями в условиях
-      интенсивного
-      ведения радиоэлектронной борьбы. Это стало возможным благодаря современным достижениям в теории управления
-      летательными аппаратами, радиоэлектронике и вычислительной технике, двигательных установках и боевом снаряжении.
+<p>AMRAAM — универсальная ракета, которую можно использовать в любой роли безо всяких модификаций. Сейчас ракета есть на вооружении у 33 стран мира.
+AIM-120 AMRAAM в комплексе с NASAMS
+Ракета AIM-120 используется в норвежско-американском зенитном ракетном комплексе NASAMS. Разработка комплекса осуществлялась совместно Raytheon и 
+норвежской Norsk Forsvarteknologia (сейчас Kongsberg Defence) с 1989 по 1993 год.
+В батарее комплекса используется машина управления, РЛС и три пусковые установки с шестью направляющими. Общая стоимость разработки и развертывания 
+до 1999 года шести батарей оценивалась в $250 млн.</p>
 
-      Небольшое количество истребителей F-18, вооруженных ракетами AIM-120, в 1991 году было перебазировано в район
-      Персидского залива в рамках операции "Буря в пустыне", однако в боевых действиях они не применялись. Первое боевое
-      применение произошло в декабре 1992 года, когда американский истребитель F-16 сбил МиГ-25 иракских ВВС над
-      территорией южного Ирака.
+<p>Модификаций ракеты AIM-120 AMRAAM
+AIM-120A — базовая модификация.
+AIM-120B имеют перепрограммируемые модули EPROM, новый цифровой процессор и ряд других новых элементов.
+AIM-120C — основное отличие от предыдущих в уменьшении размаха крыла и оперения до 447 мм.
+AIM-120C-4 получила новую боевую часть WDU-41/В меньшей массы — 18 кг (вместо 23,5 кг на ранних модификациях).
+AIM-120C5 имеет новое программное обеспечение, повышающее разрешение и повышенную помехозащищенность.
+AIM-120C-6 — аналог AIM-120C-5, но имеет радиовзрыватель новой конструкции.
+AIM-120C-7 имеет увеличенную дальность стрельбы до 120 км.
+AIM-120D оснащается двусторонней системой связи и усовершенствованной ИНС с коррекцией GPS. Это совместный проект ВВС и ВМФ США. Дальность стрельбы — 
+до 180 км.
 
-      Состав:
-      Ракета AIM-120Ракета AIM-120 выполнена по нормальной аэродинамической схеме и состоит из трех отсеков: головного,
-      боевой части (БЧ) и хвостового (см. схему). Она имеет крестообразное крыло небольшой площади, обеспечивающее
-      достаточно хорошую маневренность при невысоких скоростях полета, и крестообразные рули в хвостовой части. Корпус
-      УР
-      изготавливается из стали с окраской серого цвета, выдерживающей значительный кинетический нагрев.
+NCADE — программа разработки противоракеты воздушного базирования с использованием компонентов ракеты AMRAAM. Предназначена для перехвата 
+баллистических ракет малой и средней дальности.
+Дальность различных модификаций ракеты:
 
-      В головном отсеке сосредоточена основная часть аппаратуры автономного наведения, которое осуществляется с помощью
-      комбинированной системы — командно-инерциальной на начальном и среднем участках траектории полета и активной
-      радиолокационной на конечном. Активная РГС работает в едином с БРЛС носителей частотном диапазоне X (3см). В АРГС
-      используется генератор зондирующего сигнала с использованием лампы бегущей волны, имеющий выходную мощность 500Вт.
-      Дальность захвата АРГС цели с ЭПР а = 3м2 составляет 16... 18км.
+AIM-120A/B/C: 55-75 км
+AIM-120C-5/С-6: около 105 км
+AIM-120C-7: до 120 км
+AIM-120D: до 180 км</p>
 
-      В состав оборудования командно-инерциальной системы входят бескарданная инерциальная платформа и приемник
-      командной
-      линии связи, расположенный в сопловом блоке хвостовой части УР. Вес платформы, в которой применены миниатюрные
-      скоростные гироскопы, менее 1,4 кг. Высокопроизводительная микро-ЭВМ, работающая с тактовой частотой 30 МГц,
-      является общей для командно-инерциальной и радиолокационной систем. Она выполняет все функции управления,
-      командной
-      связи, обработки сигналов радиолокационной аппаратуры и взрывателей, а также встроенного контроля при проверке
-      работоспособности основных узлов и блоков аппаратуры. Введение такой микро-ЭВМ, позволило существенно увеличить
-      количество параметров, используемых для расчета наиболее оптимальной траектории наведения в зависимости от
-      взаимного
-      расположения ракеты и цели в точке встречи, их скоростей и направлений полета. Например, на основе измеряемых
-      дальности и угла линии визирования цели, а также скоростей их изменения микро-ЭВМ вычисляет ускорение цели, а при
-      известном собственном ускорении, получаемом с помощью инерциальной платформы, она рассчитывает возможные ее
-      маневры.
-      Эта ЭВМ может выбирать такую траекторию наведения, при которой ракета настигнет цель под ракурсом, дающим
-      наибольший
-      эффект для поражения боевой частью.
-
-      Приемник командной линии связи используется в случае необходимости коррекции траектории полета УР на среднем
-      участке. Активная радиолокационная аппаратура, обеспечивающая полностью автономное наведение ракеты после
-      надежного
-      захвата цели, включает антенну с высокочастотными каскадами приемника и передатчик. Антенна радиолокационной
-      аппаратуры размещается под радиопрозрачным обтекателем (длина 530 мм, диаметр у основания 17В мм), изготовленным
-      из
-      керамики, армированной стекловолокном.
-
-      В отсеке БЧ находятся собственно боевая часть, неконтактный радиолокационный взрыватель, а также элементы
-      предохранительно-исполнительного механизма и пиротехнической цепи. БЧ осколочного типа направленного действия, при
-      котором разлет готовых осколков производится в узком круговом или ограниченном секторе. Причем последнее возможно
-      лишь при подлете ракеты к цели под строго определенным ракурсом. При прямом попадании УР в цель срабатывает
-      контактный взрыватель. Двигательная установка представляет собой двухрежимный твердотопливный ракетный двигатель с
-      высоким удельным импульсом, работающий на малодымном без окиси алюминия топливе весом 45 кг.
-
-      Запуск aim-120
-
-      Типовая траектория наведения УР (см. схему) делится на три участка: командно-инерциальный, автономный инерциальный
-      и
-      активный радиолокационный. Обнаружение целей производится с помощью бортовой РЛС системы управления оружием
-      самолета-носителя. На истребителе F-18 станция AN/APG-65 может выделять по таким характеристикам, как дальность и
-      скорость сближения, десять наиболее важных целей и непрерывно их сопровождать при сканировании (на индикаторе в
-      кабине самолета отображаются восемь из них). После выбора цели летчиком ее координаты автоматически вводятся в
-      инерциальную платформу ракеты, и затем вплоть до пуска используется общая для УР и самолета-носителя система
-      координат, в которой осуществляются все расчеты, необходимые для перехвата. После пуска ракеты текущие координаты
-      цели регистрируются лишь в бортовой аппаратуре самолета-носителя, и в случае, если она не маневрирует, наведение
-      УР
-      производится с помощью инерциальной системы, а затем начинает работать активная радиолокационная.
-
-      Когда цель совершает маневры производится коррекция ее координат, введенных в инерциальную аппаратуру ракеты перед
-      пуском. Для этого осуществляется передача соответствующих команд коррекции через боковые лепестки антенны РЛС
-      самолета-носителя с периодичностью сканирования диаграммы направленности антенны. Эти команды воспринимаются на
-      борту УР приемником командной линии связи. Подобное командно-инерциальное наведение возможно одновременно для
-      восьми
-      УР AIM-120 при их пуске по разным целям. При этом на самолетном индикаторе отображается величина оставшегося
-      времени
-      полета каждой ракеты до момента включения ее активной радиолокационной аппаратуры, что позволяет летчику вовремя
-      прекращать передачу команд коррекции на УР, перешедшие в режим самонаведения. Такая остановка передачи команд
-      коррекции может производиться также в случае прекращения маневрирования цели, когда ракета способна наводиться с
-      помощью своей инерциальной аппаратуры до момента перехода на самонаведение. Приведенные выше способы наведения
-      применяются лишь при отсутствии преднамеренных помех. Если цель осуществляет постановку активных помех, тогда
-      бортовая аппаратура ракеты на среднем и конечном участках траектории полета может неоднократно переключаться в
-      режим
-      наведения на источник помех. В ближнем воздушном бою при визуальной видимости цели используется режим активного
-      радиолокационного самонаведения.
-
-      Взаимодействие системы управления ракеты и бортовых систем носителя строится исходя из концепции ведения
-      воздушного
-      боя, в соответствии с которой самолет, пустивший ракету в условиях боя, не должен обеспечивать радиолокационное
-      сопровождение цели в течение всего времени наведения ракеты. Как можно раньше он должен перевести ее в режим
-      автономного инерциально-активного наведения и выйти из-под ответной атаки противника. С ракеты на носитель может
-      поступать так называемая тактическая телеметрия о режимах работы систем ракеты, например о факте захвата цели
-      АРГС.
-
-      AIM-120 могут подвешиваться на пусковые устройства двух типов: с рельсовыми направляющими и с принудительным
-      отделением при помощи пиропатронов. Первые сконструированы таким образом, что на них можно размещать и ракеты
-      "Sidewinder". Устройства второго типа представляют собой несколько модифицированные существующие пусковые
-      установки
-      LAU-17 и LAU-92, которыми оснащаются самолеты F-14, F-15 и F-18. Они рассчитаны для подвески как УР "Sparrow" ,
-      так
-      и AIM-120. Устройства обоих типов позволят производить подвеску семи УР на самолете F-14, шести на F-15, F-16,
-      F-18
-      и "Tornado-Р.2", четырех на "Fantom" F-4F.
-
-      Модификации:
-
-      В 1994 году начались поставки модификации AIM-120B, имеющей усовершенствованную систему наведения WGU-41/B с
-      возможностью перепрограммирования через кабельные разъемы непосредственно в транспортном контейнере.
-
-      В 1996 году на вооружение поступила ракета AIM-120С, созданная в рамках 1-го этапа программы комплексной
-      модернизации P3I (Pre-Planned Product Improvement, Phase 1). УР отличалась уменьшенным до 447мм размахом крыла и
-      оперения. Это обеспечило возможность размещения шести (а не четырех, как в случае с AIM-120А и AIM-120В) ракет
-      AMRAAM в грузоотсеке самолета F-22A Raptor, а также снизило аэродинамическое сопротивление (что, впрочем, было
-      достигнуто за счет некоторого ухудшения маневренных характеристик УР). Ракета получила усовершенствованную систему
-      наведения WGU-44/B, масса БЧ была уменьшена до 18 кг (при сохранении прежней эффективности).
-
-      В 1998 году созданна AGM-120C-4 БЧ с усовершенствованным взрывателем WDU-41B.
-
-      В 2000 году начались поставки вариантов AIM-120C-5 (предназначенного на экспорт) и AIM-120C-6 (ориентированного на
-      использование в вооруженных силах США), созданных в рамках 2-го этапа модернизации (P3I-2). На ракетах было
-      применено новое программное обеспечение, дающее РГСН лучшее разрешение, а также повышенную помехозащищенность.
-      Другим важным усовершенствованием являлось внедрение более компактных приводов аэродинамических рулей, что
-      позволило
-      на 127 мм удлинить топливный заряд (и, в свою очередь, повысить дальность полета ракеты до 105 км).
-
-      В настоящее время ВВС более 30 стран мира имеют на вооружении ракеты типа AMRAAM. Они интегрированы в комплексы
-      вооружения самолетов F-15, F-16, F/A-18, F-22, F-4F, JAS 39 «Грипен», JA 37 «Вигген», «Си Харриер», «Харриер»II+,
-      «Торнадо» и ЕF2000 «Тайфун».
-
-      Поставки ракет AIM-120C-5 осуществляются как странам, уже располагающим УР AMRAAM более ранних модификаций (Канада
-      и
-      Швеция), так и новым покупателям – Польше, Чили (где ими комплектуются истребители F-16C), Венгрии и Чехии (для
-      оснащения самолетов JAS 39С «Грипен»). ВВС Великобритании также заказали партию ракет AIM-120C-5 для оснащения
-      истребителей EF2000 «Тайфун». Поставки УР должны быть выполнены в 2010-2013 гг., т.е. практически одновременно с
-      началом поставок «европейских» ракет «Метеор», которыми будут оснащаться самолеты «Тайфун», начиная с серии Block
-      15.
-
-      В 2004 году была создана более совершенная модификация ракеты AMRAAM – AIM-120C-7 (P3I-3). Она получила новое
-      программное обеспечение, еще больше повышающее разрешающую способность и помехозащищенность РГСН. Использование
-      более современной и компактной элементной базы позволило в очередной раз увеличить длину двигательного отсека.
-      Усовершенствованные РГСН и силовая установка обеспечивают увеличение дальности стрельбы модернизированной ракеты
-      до
-      120км, что позволяет с большей эффективностью использовать ее в составе вооружения новых или модернизированных
-      истребителей, оснащенных БРЛС с активными антенными фазированными решетками (АФАР).
-
-      В 2007 году были сняты с вооружения ВМС США последние палубные многоцелевые истребители Нортроп Грумман F-14D
-      «Томкэт», вооруженные ракетами большой дальности AIM-54C «Феникс» (150 км). Двухместный самолет F/A-18F с ракетами
-      AIM-120C-7 рассматривался в качестве замены этого комплекса.
-
-      Поставки ракет AIM-120C-7 ВВС США начались в 2006 году. Следует отметить, что стоимость новой УР значительно
-      превысила стоимость ракеты AIM-120C-5 (0.4 млн. долл. за одно изделие). Дополнительные расходы потребовались и для
-      модернизации программного обеспечения систем управления вооружением истребителей, которые переоснащаются
-      AIM-120C-7.
-
-      К настоящему времени выпущено около 13000 ракет AIM-120 всех модификаций, значительная часть которых была
-      поставлена
-      на экспорт.
-
-      Очередной (P3I-4) модификацией ракеты AMRAAM является AIM-120C-8 (ранее известная как АIM-120D). В апреле 2006
-      года
-      был выполнен ее первый пуск с борта истребителя 5-го поколения F-22A Raptor. Система наведения AIM-120C-8
-      дополнена
-      приемником спутниковой навигационной системы GPS и двусторонней линией передачи данных. Однако основные усилия
-      разработчиков сосредоточены на существенном увеличении дальности пуска новой УР. Она, по сравнению с AIM-120C-7,
-      возросла примерно на 50%, достигнув 180 км.
-
-      Характеристики:
-      Максимальная дальность пуска, км:
-      - AIM-20a
-      - AIM-120C-5
-      - AIM-120C-7
-      - AIM-120C-8 50
-      105
-      120
-      180
-      Скорость полета ракеты 4M
-      Габариты, мм:
-      - длина
-      - диаметр корпуса
-      - размах крыльев
-      - размах рулей
-      - размах крыльев для AIM-120C
-      - размах рулей для AIM-120C 3660
-      178
-      526
-      627
-      447
-      447
-      Стартовая масса, кг 150.7
-      Масса БЧ, кг 22 (18 для AIM-120C)
+<p>Технические характеристики
+Стоит понимать, что все ракеты AMRAAM отличаются и с каждой модификацией только совершенствуются. Все они имеют разную дальность, вес и скорость.
+Общие характеристики базовой модификации:
+Основная функция: тактическая ракета воздуха — воздух
+Длина: 366 см
+Вес при запуске: 150,75 кг
+Диаметр: 17,78 см
+Размах крыльев: 52,58 см
+Дальность: 55-75 км
+Скорость: сверхзвуковая
+Боеголовка: взрывной фрагмент
+Стоимость AMRAAM зависит от модификации, например, вариант AIM-120C стоит $300-400 тыс., а последняя модель AIM-120D — около $700 тыс.
     </p>
   </div>
+</body>
+</html>
+  
 
