--- a/pages/missiles/missiles.html
+++ b/pages/missiles/missiles.html
@@ -53,6 +53,16 @@
               <li class="missiles-item">maverick</li>
               <li class="missiles-item">sidewinder</li>
             </ul>
+             
+            <h3 class="missiles-list-title">missiles russia</h3>
+            <ul class="missiles-list">
+
+              <li class="missiles-item">p 60</li>
+              <li class="missiles-item">er 27t</li>
+              <li class="missiles-item">er 27e</li>
+              <li class="missiles-item">p 73</li>
+              <li class="missiles-item">er 27t</li>
+            </ul>
 
           </article>
           <div class="main-content">
@@ -66,11 +76,11 @@
     <!-- --FOOTER---- -->
     <footer class="footer">
       <div class="footer-container">
-        <div class="footer-logo-block ">
+        <a class="logo-block" href="../../index.html">
           <h2 class="logo-title">DCS wiki</h2>
           <!-- <img class="logo-icon" src="./assets/icons/missile icon.jpg" alt="missile icon"> -->
 
-        </div>
+        </a>
 
         <span class="copyright">Copyright 2022</span>
       </div>
