add: add aim7m in missiles directory and edit missile-reducer,js

--- a/pages/missiles/aim-120.html
+++ b/pages/missiles/aim-120.html
@@ -1,76 +1,89 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./missiles-style.css" >
-  <title>aim-120</title>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="./missiles-style.css">
+<title>aim-120</title>
 </head>
+
 <body>
   <div class="aim120-block main-info">
     <img src="../../assets/images/missiles/aim120.jpg" alt="foto aim120">
-    <p>
-      AIM-120 AMRAAM: что это
-Это американская управляемая ракета средней дальности класса воздух — воздух. Ракета обладает способностью работать в любых погодных условиях.
-Предназначена AIM-120 AMRAAM для поражения воздушных целей врага за пределами прямой видимости.
-Производством ракет занимались фирмы Hughes Aircraft и Raytheon. После поглощения фирмы Hughes единственным производителем ракет является фирма 
-Raytheon.</p>
-<p>Как отмечают разработчики, AMRAAM — самая совершенная в мире ракета, проверенная в боевых условиях.
-Ракета сочетает в себе беспрецедентные характеристики — она легкая и эффективная. AIM-120 AMRAAM имеет комбинацию инерциальной навигации 
-(то есть ракета сама может определять координаты и параметры движения цели).
-AMRAAM имеет бортовой активный радар, чтобы найти намеченную цель и завершить ее перехват. А ракетный двигатель, изготовленным компанией Nammo, 
-позволяет осуществлять перехват на больших расстояниях и высотах.</p>
+    <h3 class="missile-title">Aim-120</h3>
+    <ul class="missile-prop-list">
+      <li class="missile-prop-item">Длина: 366 см</li>
+      <li class="missile-prop-item"> Вес при запуске: 150,75 кг</li>
+      <li class="missile-prop-item">Диаметр: 17,78 см</li>
+      <li class="missile-prop-item">Размах крыльев: 52,58 см</li>
+      <li class="missile-prop-item"> Дальность: 55-75 км</li>
+      <li class="missile-prop-item"> Скорость: сверхзвуковая</li>
+      <li class="missile-prop-item"> Боеголовка: взрывной фрагмент</li>
+    </ul>
 
-<p>Особенность ракеты — в том, что она может запускаться как с истребителей, так и с пусковой установки.
-Носителями ракета AMRAAM выступают F-15A/B/C/D/E Eagle/Strike Eagle, F-16 Fighting Falcon, F/A-18 Super Hornet, F-22 Raptor, Eurofighter Typhoon, 
-JAS-39 Gripen, Tornado и Harrier.
-Работать как ракета класса земля — воздух AMRAAM может с системы противовоздушной обороны NASAMS, способной поражать цели на любых высотах.
-Ракета AMRAAM может перехватывать цели на больших расстояниях и высотах. Ракета получает ускорение в дальности благодаря большему ракетному двигателю 
-и оптимизированным алгоритмам управления полетом.</p>
+    Стоимость AMRAAM зависит от модификации, например, вариант AIM-120C стоит $300-400 тыс., а последняя модель
+    AIM-120D — около $700 тыс.
 
-<p>AMRAAM — универсальная ракета, которую можно использовать в любой роли безо всяких модификаций. Сейчас ракета есть на вооружении у 33 стран мира.
-AIM-120 AMRAAM в комплексе с NASAMS
-Ракета AIM-120 используется в норвежско-американском зенитном ракетном комплексе NASAMS. Разработка комплекса осуществлялась совместно Raytheon и 
-норвежской Norsk Forsvarteknologia (сейчас Kongsberg Defence) с 1989 по 1993 год.
-В батарее комплекса используется машина управления, РЛС и три пусковые установки с шестью направляющими. Общая стоимость разработки и развертывания 
-до 1999 года шести батарей оценивалась в $250 млн.</p>
+    <p>AIM-120 AMRAAM: что это
+      Это американская управляемая ракета средней дальности класса воздух — воздух. Ракета обладает способностью
+      работать в любых погодных условиях.
+      Предназначена AIM-120 AMRAAM для поражения воздушных целей врага за пределами прямой видимости.
+      Производством ракет занимались фирмы Hughes Aircraft и Raytheon. После поглощения фирмы Hughes единственным
+      производителем ракет является фирма
+      Raytheon.</p>
+    <p>Как отмечают разработчики, AMRAAM — самая совершенная в мире ракета, проверенная в боевых условиях.
+      Ракета сочетает в себе беспрецедентные характеристики — она легкая и эффективная. AIM-120 AMRAAM имеет комбинацию
+      инерциальной навигации
+      (то есть ракета сама может определять координаты и параметры движения цели).
+      AMRAAM имеет бортовой активный радар, чтобы найти намеченную цель и завершить ее перехват. А ракетный двигатель,
+      изготовленным компанией Nammo,
+      позволяет осуществлять перехват на больших расстояниях и высотах.</p>
 
-<p>Модификаций ракеты AIM-120 AMRAAM
-AIM-120A — базовая модификация.
-AIM-120B имеют перепрограммируемые модули EPROM, новый цифровой процессор и ряд других новых элементов.
-AIM-120C — основное отличие от предыдущих в уменьшении размаха крыла и оперения до 447 мм.
-AIM-120C-4 получила новую боевую часть WDU-41/В меньшей массы — 18 кг (вместо 23,5 кг на ранних модификациях).
-AIM-120C5 имеет новое программное обеспечение, повышающее разрешение и повышенную помехозащищенность.
-AIM-120C-6 — аналог AIM-120C-5, но имеет радиовзрыватель новой конструкции.
-AIM-120C-7 имеет увеличенную дальность стрельбы до 120 км.
-AIM-120D оснащается двусторонней системой связи и усовершенствованной ИНС с коррекцией GPS. Это совместный проект ВВС и ВМФ США. Дальность стрельбы — 
-до 180 км.
+    <p>Особенность ракеты — в том, что она может запускаться как с истребителей, так и с пусковой установки.
+      Носителями ракета AMRAAM выступают F-15A/B/C/D/E Eagle/Strike Eagle, F-16 Fighting Falcon, F/A-18 Super Hornet,
+      F-22 Raptor, Eurofighter Typhoon,
+      JAS-39 Gripen, Tornado и Harrier.
+      Работать как ракета класса земля — воздух AMRAAM может с системы противовоздушной обороны NASAMS, способной
+      поражать цели на любых высотах.
+      Ракета AMRAAM может перехватывать цели на больших расстояниях и высотах. Ракета получает ускорение в дальности
+      благодаря большему ракетному двигателю
+      и оптимизированным алгоритмам управления полетом.</p>
 
-NCADE — программа разработки противоракеты воздушного базирования с использованием компонентов ракеты AMRAAM. Предназначена для перехвата 
-баллистических ракет малой и средней дальности.
-Дальность различных модификаций ракеты:
+    <p>AMRAAM — универсальная ракета, которую можно использовать в любой роли безо всяких модификаций. Сейчас ракета
+      есть на вооружении у 33 стран мира.
+      AIM-120 AMRAAM в комплексе с NASAMS
+      Ракета AIM-120 используется в норвежско-американском зенитном ракетном комплексе NASAMS. Разработка комплекса
+      осуществлялась совместно Raytheon и
+      норвежской Norsk Forsvarteknologia (сейчас Kongsberg Defence) с 1989 по 1993 год.
+      В батарее комплекса используется машина управления, РЛС и три пусковые установки с шестью направляющими. Общая
+      стоимость разработки и развертывания
+      до 1999 года шести батарей оценивалась в $250 млн.</p>
 
-AIM-120A/B/C: 55-75 км
-AIM-120C-5/С-6: около 105 км
-AIM-120C-7: до 120 км
-AIM-120D: до 180 км</p>
+    <p>Модификаций ракеты AIM-120 AMRAAM
+      AIM-120A — базовая модификация.
+      AIM-120B имеют перепрограммируемые модули EPROM, новый цифровой процессор и ряд других новых элементов.
+      AIM-120C — основное отличие от предыдущих в уменьшении размаха крыла и оперения до 447 мм.
+      AIM-120C-4 получила новую боевую часть WDU-41/В меньшей массы — 18 кг (вместо 23,5 кг на ранних модификациях).
+      AIM-120C5 имеет новое программное обеспечение, повышающее разрешение и повышенную помехозащищенность.
+      AIM-120C-6 — аналог AIM-120C-5, но имеет радиовзрыватель новой конструкции.
+      AIM-120C-7 имеет увеличенную дальность стрельбы до 120 км.
+      AIM-120D оснащается двусторонней системой связи и усовершенствованной ИНС с коррекцией GPS. Это совместный проект
+      ВВС и ВМФ США. Дальность стрельбы —
+      до 180 км.
 
-<p>Технические характеристики
-Стоит понимать, что все ракеты AMRAAM отличаются и с каждой модификацией только совершенствуются. Все они имеют разную дальность, вес и скорость.
-Общие характеристики базовой модификации:
-Основная функция: тактическая ракета воздуха — воздух
-Длина: 366 см
-Вес при запуске: 150,75 кг
-Диаметр: 17,78 см
-Размах крыльев: 52,58 см
-Дальность: 55-75 км
-Скорость: сверхзвуковая
-Боеголовка: взрывной фрагмент
-Стоимость AMRAAM зависит от модификации, например, вариант AIM-120C стоит $300-400 тыс., а последняя модель AIM-120D — около $700 тыс.
-    </p>
+      NCADE — программа разработки противоракеты воздушного базирования с использованием компонентов ракеты AMRAAM.
+      Предназначена для перехвата
+      баллистических ракет малой и средней дальности.
+      Дальность различных модификаций ракеты:
+
+      AIM-120A/B/C: 55-75 км
+      AIM-120C-5/С-6: около 105 км
+      AIM-120C-7: до 120 км
+      AIM-120D: до 180 км</p>
+
+
   </div>
 </body>
-</html>
-  
 
+</html>
