--- a/pages/missiles/missiles.html
+++ b/pages/missiles/missiles.html
@@ -45,23 +45,22 @@
         <div class="main-inner">
           <article class="main-list">
             <h3 class="missiles-list-title">missiles NATO</h3>
-            <ul class="missiles-list">
-
-              <li class="missiles-item">aim 120</li>
-              <li class="missiles-item">aim 120b</li>
-              <li class="missiles-item">aim 120e</li>
-              <li class="missiles-item">maverick</li>
-              <li class="missiles-item">sidewinder</li>
+            <ul class="nato-missiles-list">
+              <li class="missile-item">aim 120</li>
+              <li class="missile-item">aim 120b</li>
+              <li class="missile-item">aim 120c</li>
+              <li class="missile-item">AIM-7М Sparrow</li>
+              <li class="missile-item">sidewinder</li>
             </ul>
              
             <h3 class="missiles-list-title">missiles russia</h3>
-            <ul class="missiles-list">
+            <ul class="russia-missiles-list">
 
-              <li class="missiles-item">p 60</li>
-              <li class="missiles-item">er 27t</li>
-              <li class="missiles-item">er 27e</li>
-              <li class="missiles-item">p 73</li>
-              <li class="missiles-item">er 27t</li>
+              <li class="missile-item">p 60</li>
+              <li class="missile-item">er 27t</li>
+              <li class="missile-item">er 27e</li>
+              <li class="missile-item">p 73</li>
+              <li class="missile-item">er 27t</li>
             </ul>
 
           </article>
